# stealth-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic-scraper.py
references/: __init__.py  cookie-persistence.md  data-contract.md  delay-strategies.md  fetch-avatars.py  fingerprint-strategies.md  full-template.py  manifest-pattern.md  merge-json.py  proxy-pool.md  requirements-dev.txt  requirements.txt  troubleshooting.md  worker-coordination.md
tests/: __init__.py  test-data.json  test_core.py  test_integration.py
